<resources>
    <string name="app_name">Minions</string>
    <string name="movie_name">Movie Name</string>
    <string name="content_desc">Movie Description</string>
    <string name="release_date">Release Date</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="genre_text">Genre :</string>
    <string-array name="data_movie">
        <item>Despicable Me</item>
        <item>Despicable Me 2</item>
        <item>Despicable Me 3</item>
        <item>Minions</item>
        <item>Minions: The Rise of Gru</item>
        <item>Minions: 3 Mini-Movie Collection</item>
    </string-array>
    <string-array name="movie_description">
        <item>Villainous Gru lives up to his reputation as a despicable, deplorable and downright unlikable guy when he hatches a plan to steal the moon from the sky. But he has a tough time staying on task after three orphans land in his care.</item>
        <item>Gru is recruited by the Anti-Villain League to help deal with a powerful new super criminal.</item>
        <item>Gru and his wife Lucy must stop former \'80s child star Balthazar Bratt from achieving world domination.</item>
        <item>Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.</item>
        <item>The continuation of the adventures of the Minions, always in search of a tyrannical leader.</item>
        <item>The Minions are back along with some new friends in three hilariously fun short films: Competition, Cro Minion, and Binky Nelson Unpacified.</item>
    </string-array>
    <array name="movie_photo">
        <item>@drawable/despicable_me</item>
        <item>@drawable/despicable_me_2</item>
        <item>@drawable/despicable_me_3</item>
        <item>@drawable/minions</item>
        <item>@drawable/minions_the_rise_of_gru</item>
        <item>@drawable/minions_3_mini_movie_collection</item>
    </array>
    <string-array name="release_movie">
        <item>July 9, 2010</item>
        <item>July 3, 2013</item>
        <item>June 30, 2017</item>
        <item>July 10, 2015</item>
        <item>July 3, 2020</item>
        <item>October 11, 2016</item>
    </string-array>
    <string-array name="movie_genre">
        <item>ANIMATION, FAMILY, COMEDY</item>
        <item>ANIMATION, COMEDY, FAMILY</item>
        <item>ACTION, ANIMATION, COMEDY, FAMILY, ADVENTURE</item>
        <item>FAMILY, ANIMATION, ADVENTURE, COMEDY</item>
        <item>FAMILY, ANIMATION, ACTION, ADVENTURE, COMEDY</item>
        <item>FAMILY, ANIMATION, ADVENTURE, COMEDY</item>
    </string-array>
    <string name="tab_text_1">MOVIES</string>
    <string name="tab_text_2">SHORT MOVIES</string>
    <string name="sv_name">Nama Short Movies Show</string>
    <string name="sv_desc">Short Movies Show Description</string>
    <string name="sv_release">Release Date</string>
    <string name="sv_genre">Short Movies Show Genre</string>
    <string name="sv_genre_text">Genre :</string>
    <string-array name="data_sv_shows">
        <item>Banana</item>
        <item>Competition</item>
        <item>Despicable Me Presents: Minion Madness</item>
        <item>Home Makeover</item>
        <item>Minions - Jingle Bells</item>
        <item>Minions: Orientation Day</item>
        <item>Minions: Puppy</item>
        <item>Minions: Training Wheels</item>
        <item>Mower Minions</item>
        <item>Panic in the Mailroom</item>
        <item>Santa\'s Little Helpers</item>
        <item>Yellow Is the New Black</item>
    </string-array>
    <string-array name="sv_description">
        <item>The Minions fight over a delicious banana.. but is that all they want?!</item>
        <item>Two minions working in a bomb lab get competitive. Short #1 from the \'Minions: 3 Mini-Movie Collection</item>
        <item>With so many jobs to choose from, the Minions have to make serious decisions after watching an \'Initiation Video\'. What could go wrong?!</item>
        <item>3 Mini movies that feature the Minions. Orientation Day, Home Makeover and Banana.</item>
        <item>The Minions have to make Gru\'s home safe for the children, before Child Services arrive!</item>
        <item>Minions singing Jingle Bells.</item>
        <item>With so many jobs to choose from, the Minions have to make serious decisions after watching an \'Initiation Video\'. What could go wrong?!</item>
        <item>A Minion, seeing many owners walk their dogs, wants a puppy of his own. He tries to leash a ladybug but fails. Luckily, a UFO that sweeps away the ladybug somehow agrees to become a Puppy.</item>
        <item>Margo, Edith, and Agnes spot an ice cream truck.The three of them go after the truck but Agnes falls as she attempts to pedal to the truck. The Minions, seeing her so upset by this, decide to build her a unicorn-themed motorcycle. Agnes goes for a little ride around town.</item>
        <item>The Minions need to raise $20 to purchase an as seen on TV banana blender. So they take up lawn mowing at an old folks home, with hilarious antics!</item>
        <item>Two Minions are busy at work in the mailroom. One of them, bored, decides to throw a box of expired PX-41 samples into its designated chute.</item>
        <item>The Minions, having been accidentally dropped off at the North Pole, make the most of the situation by trying to become elves.</item>
        <item>Short film taking place during the events of Despicable Me 3 (2017).</item>
    </string-array>
    <array name="sv_photo">
        <item>@drawable/banana</item>
        <item>@drawable/competition</item>
        <item>@drawable/despicable_me_presents_minion_madness</item>
        <item>@drawable/home_makeover</item>
        <item>@drawable/minions_jingle_bells</item>
        <item>@drawable/minions_orientation_day</item>
        <item>@drawable/minions_puppy</item>
        <item>@drawable/minions_training_wheels</item>
        <item>@drawable/mower_minions</item>
        <item>@drawable/panic_in_the_mailroom</item>
        <item>@drawable/yellow_is_the_new_black</item>
        <item>@drawable/santas_little_helpers</item>
    </array>
    <string-array name="release_sv">
        <item>December 13, 2010</item>
        <item>December 8, 2015</item>
        <item>December 15, 2010</item>
        <item>December 13, 2010</item>
        <item>December 11, 2014</item>
        <item>December 13, 2010</item>
        <item>December 10, 2013</item>
        <item>December 10, 2013</item>
        <item>July 8, 2016</item>
        <item>December 10, 2013</item>
        <item>February 5, 2019</item>
        <item>September 11, 2018</item>
    </string-array>
    <string-array name="sv_genre">
        <item>ANIMATION, COMEDY, FAMILY</item>
        <item>ANIMATION, FAMILY</item>
        <item>FAMILY, ADVENTURE, ANIMATION, COMEDY</item>
        <item>ANIMATION, COMEDY, FAMILY</item>
        <item>ANIMATION, SINGING</item>
        <item>ANIMATION, COMEDY, FAMILY</item>
        <item>ANIMATION, COMEDY, FAMILY, SCIENCE FICTION</item>
        <item>ANIMATION, COMEDY, FAMILY</item>
        <item>COMEDY, ANIMATION</item>
        <item>ANIMATION, COMEDY, FAMILY, SCIENCE FICTION</item>
        <item>ANIMATION, COMEDY, FAMILY, ADVENTURE</item>
        <item>ANIMATION, COMEDY, FAMILY, CRIME</item>
    </string-array>
    <string name="lang_setting_title">Change Language</string>
    <string name="login_welcome">Welcome</string>
    <string name="login_email_hint">Input your email</string>
    <string name="login_password_hint">Input Your Password</string>
    <string name="login_submit_hint">Login</string>
    <string name="minions_logo">Minions Logo</string>
    <string name="wrong_email">Wrong Email!!</string>
    <string name="wrong_password">Wrong Password!!</string>
    <string name="register_submit_hint">Register</string>
    <string name="log_out">Log Out</string>
    <string name="register_password_hint">Register</string>
    <string name="logout_hint">Are Your Sure to Log Out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
